--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,47 +1,69 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+:root {
+    --primary-bg-color: darkblue;
+    --primary-text-color: white;
+    --box-shadow: 0 0 30px gray;
+    --padding: 10px;
+    --border: 1px solid black;
+}
+
+
+
 nav {
-    background-color: darkblue;
+    background-color:var(--primary-bg-color);
     padding: 10px;
 }
 
 nav a {
-    color: white;
+    color: var(--primary-text-color);
     display: block;
     padding: 20px;
 }
 
 h1 {
-    color: darkblue;
+    color: var(--primary-bg-color);
 }
 
 img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--border);
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow:  var(--box-shadow);
 }
 
 p {
-    padding: 10px;
+    padding: var(--padding);
 }
 
 main {
     max-width: 840px;
 }
 
+main img {
+    float: right;
+}
+
 aside {
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1 */
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: center;
 }
 
 aside img {
     width: 200px;
     height: auto;
+}
+
+aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
 }
 
 p {
@@ -52,4 +74,14 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+
+.box {
+    margin: 1 rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
 }
