--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,9 +81,9 @@ footer {
 /* Class Selectors */
 
 .box {
-    margin: 1 rem;
-    border: 1px solid rgb(0 0 0 / 10%);
-    padding: 1rem;
-    background-color: #ddd;
-    color: #000;
+    margin: 1rem;
+    border: var(--border);
+    padding: var(--padding);
+    background-color: var(--aside-bg-color);
+    color:var(--aside-text-color);
 }
