--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,10 +13,12 @@ body {
     color: var(--text-color);
     background-color: var(--background-color);
     margin: 0;
-    padding: 0;
+    padding: 20px;
     max-width: 1200px;
     margin: auto;
 }
+
+
 
 /* Header Styles with Grid */
 header {
@@ -182,28 +184,36 @@ footer {
 
 /* Hero Section */
 .hero {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    margin-bottom: 20px;
-    
-    
-}
-
-.hero img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.hero-title {
-    color: #fbfcff;
-    font-size: 1.8rem;
+    padding: 40px 20px;
+    background-color: var(--secondary-color);
     text-align: center;
-    margin-bottom: 20px;
-
-    
 }
+
+.hero h2 {
+    font-size: 2.5rem;
+    color: var(--text-color);
+    margin-bottom: 20px;
+}
+
+.hero-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr; /* Text takes 2/3 width, image takes 1/3 */
+    gap: 10px;
+    align-items: center;
+}
+
+.hero-content p {
+    font-size: 1rem;
+    line-height: 1.5;
+    color: var(--text-color);
+}
+
+.hero-content img {
+    width: 70%;
+    max-width: 300px;
+    border-radius: 8px;
+}
+
 
 /* Responsive Adjustments */
 @media (max-width: 768px) {
