--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -21,20 +21,23 @@ body {
 
 /* Header Styles with Grid */
 header {
+    margin: 1rem auto;
     display: grid;
-    grid-template-columns: auto 1fr auto;
+    grid-template-columns: 120px 1fr 1fr;
     align-items: center;
     padding: 10px 20px;
     background-color: var(--primary-color);
-    gap: 50px;
+    gap:100px;
     justify-content: space-between;
-    
+    border-bottom: 1px solid #ccc;
+	max-width: 1500px;
+    margin-left:1px ;
     
 }
 
 header img {
     height: 180px;
-    margin-left: 180px;
+    margin-left: 10px;
         
 }
 
